@@ -70,21 +70,66 @@
 				</div>
 				<div class="panel">
 					<div class="unit-boxes">
-						<div class="box" id="unit_box0" data-cell="0"><div class="unit-image"></div></div>
-						<div class="box" id="unit_box1" data-cell="1"><div class="unit-image"></div></div>
-						<div class="box" id="unit_box2" data-cell="2"><div class="unit-image"></div></div>
-						<div class="box" id="unit_box3" data-cell="3"><div class="unit-image"></div></div>
-						<div class="box" id="unit_box4" data-cell="4"><div class="unit-image"></div></div>
-						<div class="box" id="unit_box5" data-cell="5"><div class="unit-image"></div></div>
-						<div class="box" id="unit_box6" data-cell="6"><div class="unit-image"></div></div>
-						<div class="box" id="unit_box7" data-cell="7"><div class="unit-image"></div></div>
-						<div class="box" id="unit_box8" data-cell="8"><div class="unit-image"></div></div>
-						<div class="box" id="unit_box9" data-cell="9"><div class="unit-image"></div></div>
-						<div class="box" id="unit_box10" data-cell="10"><div class="unit-image"></div></div>
-						<div class="box" id="unit_box11" data-cell="11"><div class="unit-image"></div></div>
-						<div class="box" id="unit_box12" data-cell="12"><div class="unit-image"></div></div>
-						<div class="box" id="unit_box13" data-cell="13"><div class="unit-image"></div></div>
-						<div class="box" id="unit_box14" data-cell="14"><div class="unit-image"></div></div>
+						<div class="box" id="unit_box0" data-cell="0">
+							<canvas id="cell_canvas_0" width="64" height="50"></canvas>
+							<div class="unit-image"></div>
+						</div>
+						<div class="box" id="unit_box1" data-cell="1">
+							<canvas id="cell_canvas_1" width="64" height="50"></canvas>
+							<div class="unit-image"></div>
+						</div>
+						<div class="box" id="unit_box2" data-cell="2">
+							<canvas id="cell_canvas_2" width="64" height="50"></canvas>
+							<div class="unit-image"></div>
+						</div>
+						<div class="box" id="unit_box3" data-cell="3">
+							<canvas id="cell_canvas_3" width="64" height="50"></canvas>
+							<div class="unit-image"></div>
+						</div>
+						<div class="box" id="unit_box4" data-cell="4">
+							<canvas id="cell_canvas_4" width="64" height="50"></canvas>
+							<div class="unit-image"></div>
+						</div>
+						<div class="box" id="unit_box5" data-cell="5">
+							<canvas id="cell_canvas_5" width="64" height="50"></canvas>
+							<div class="unit-image"></div>
+						</div>
+						<div class="box" id="unit_box6" data-cell="6">
+							<canvas id="cell_canvas_6" width="64" height="50"></canvas>
+							<div class="unit-image"></div>
+						</div>
+						<div class="box" id="unit_box7" data-cell="7">
+							<canvas id="cell_canvas_7" width="64" height="50"></canvas>
+							<div class="unit-image"></div>
+						</div>
+						<div class="box" id="unit_box8" data-cell="8">
+							<canvas id="cell_canvas_8" width="64" height="50"></canvas>
+							<div class="unit-image"></div>
+						</div>
+						<div class="box" id="unit_box9" data-cell="9">
+							<canvas id="cell_canvas_9" width="64" height="50"></canvas>
+							<div class="unit-image"></div>
+						</div>
+						<div class="box" id="unit_box10" data-cell="10">
+							<canvas id="cell_canvas_10" width="64" height="50"></canvas>
+							<div class="unit-image"></div>
+						</div>
+						<div class="box" id="unit_box11" data-cell="11">
+							<canvas id="cell_canvas_11" width="64" height="50"></canvas>
+							<div class="unit-image"></div>
+						</div>
+						<div class="box" id="unit_box12" data-cell="12">
+							<canvas id="cell_canvas_12" width="64" height="50"></canvas>
+							<div class="unit-image"></div>
+						</div>
+						<div class="box" id="unit_box13" data-cell="13">
+							<canvas id="cell_canvas_13" width="64" height="50"></canvas>
+							<div class="unit-image"></div>
+						</div>
+						<div class="box" id="unit_box14" data-cell="14">
+							<canvas id="cell_canvas_14" width="64" height="50"></canvas>
+							<div class="unit-image"></div>
+						</div>
 					</div>
 					<div class="ext-buttons">
 						<div class="up"></div>
